2004-09-21 Florian Boor <florian.boor@kernelconcepts.de>

	* interface.c, backend.*: Changed "Open" menu item to "Load" and activate
                              it only if a config file is present.
	* Released Version 0.7
	* interface.c: Aded feedback dialog applying rules.
	               Improved button bar help, removed obsolete stuff.
	* interface.c: Removed useless "info" menu entry, changed shortcut.
	* editrule.c: Change window title to "Add Rule" when adding new rules.

2004-09-03 Florian Boor <florian.boor@kernelconcepts.de>
	
	* Changed title to "Network Shield" to avoid confusion, it 
          is not really a firewall.

2004-08-16 Florian Boor <florian.boor@kernelconcepts.de>

	* backend.c: Fixed major bug causing segfault on some platforms.

2004-07-29 Florian Boor <florian.boor@kernelconcepts.de>
	
	* Released Version 0.6
	* Makefile: New version.
	* interface.c: Don't activate rules on start of frontend.
	* interface.c: Apply rules only if networking control is active.

2004-06-21  Philip Blundell  <philb@gnu.org>

	* backend.c (DEFAULT_INTERFACE): Remove space from string.
	(do_save_rules): Write out interface as well.
	(do_load_rules): Read interface from file.  Use DEFAULT_INTERFACE
	if unspecified.
	(do_rules_apply): Use specified interface for rule.  Convert "!lo"
	to "! lo" as required by iptables.
	(find_iptables): New function.
	(suidloop): Call it.
	* backend.h (struct): Add interface.
	* main.c (main): Call find_iptables before other backend functions.
	
2004-06-18 Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.5
	* improved postinst.
	* backend.c: Improved rule handling. Removes policies now. 
	* backend.c: Iptables autoprobing.
	* interface.c: Minor fixes.	

2004-06-11 Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.4
	* Makefile: Install new stuff.
	* postinst: Creates default links for script now.
	* ipshield: New init script that restores rules.